<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNextLaunches"
        android:visibility="gone"
        android:text="@string/next_launches"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginVertical="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_in"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00d:53h:34m:00s"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/tvTimer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SpaceX"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:id="@+id/tvProviderName"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="South Texas Luanch Site"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/tvLocationName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="USA"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/tvCountry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/information"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_toStartOf="@id/tvLocation"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvInformation" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weather"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:layout_toEndOf="@id/tvLocation"
            android:id="@+id/tvWeather" />

    </RelativeLayout>

</LinearLayout>